# doubao_realtime_voice_model_joe

./: 1.md  实时同声传译工具.md  端到端实时语音大模型API接入文档--豆包语音-火山引擎.md
.trae/rules/: project_rules.md
__MACOSX/realtime_dialog/: ._README.md  ._requirements.txt
realtime_dialog/: README.md  config.py
realtime_dialog/tests/: test_audio_manager.py  test_config.py  test_main.py  test_protocol.py  test_realtime_dialog_client.py
video_translator/: README.md  audio_capture.py  config.py  doubao_client.py  pyproject.toml  requirements.txt  run.bat  setup.py  test_installation.py  translator.py
