[project]
name = "video-translator"
version = "0.1.0"
description = "英文视频同声传译工具"
requires-python = ">=3.8"
dependencies = [
    "pyaudio>=0.2.11",
    "websockets>=11.0.3",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "asyncio-mqtt>=0.11.1",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"